# CiteForge

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
CiteForge/: api_clients.py  api_utils.py  bibtex_build.py  bibtex_utils.py  config.py  doi_utils.py  exceptions.py  http_utils.py  id_utils.py  io_utils.py  merge_utils.py  text_utils.py
data/: input.csv
output/: summary.csv
output/Abidi (fzr2PUYAAAAJ)/: Abidi2023-KidneyPhenotypes.bib  Abidi2024-COPDManagement.bib  Abidi2024-KidneyFrailty.bib  Abidi2024-PhenotypeClustering.bib  Agyapong2023-WellnessZambia.bib  Ahmed2023-RenalStoneESWL.bib  Barrett2022-KnowledgeGraph.bib  Daowd2021-BuildingKnowledge.bib  Daowd2021-FrameworkBuild.bib  Daowd2022-KnowledgeGraph.bib  Eastwood2023-AIEmMedCanada.bib  Hussain2021-OutcomesCystectomy.bib  Hussain2022-FourDecades.bib  Kureshi2024-HealthNeedsAnalysis.bib  Kureshi2024-TBIDeprivation.bib  Kureshi2024-TBIHotspots.bib  Kureshi2024-TbiPhenotypeRisk.bib  Kureshi2024-TopoInjuryMortality.bib  Kureshi2025-TBIHeterogeneity.bib  Majouni2025-GraphNeural.bib  (+34 more)
src/: api_clients.py  api_configs.py  api_generics.py  api_utils.py  bibtex_build.py  bibtex_utils.py  config.py  doi_utils.py  exceptions.py  http_utils.py  id_utils.py  io_utils.py  log_utils.py  merge_utils.py  models.py  text_utils.py
tests/: apis.py  core.py  fixtures.py  pipeline.py  run.py  test_apis.py  test_config.py  test_core.py  test_data.py  test_deduplication.py  test_integration.py  test_io_csv.py  test_make.py  test_pipeline.py  test_result.py  test_utils.py
(+1982 files in other folders)
