[project]
name = "src"
version = "1.0.0"
description = "Automated BibTeX generation and metadata enrichment tool"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = []

[tool.python]
# Minimum Python version: 3.10
# Recommended: Python 3.10 or higher
# Code uses modern Python features:
# - Type hints with native generics (list[str], dict[str, Any])
# - Pattern matching (if used)
# - Structural pattern matching
# - Better error messages
