[project]
name = "src"
version = "1.0.0"
description = "Automated BibTeX generation and metadata enrichment tool"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32.0",
    "rapidfuzz>=3.0.0",
    "unidecode>=1.3.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]